# Dummy-Robot

1.Hardware/MotorDriver-20/: .gitignore  Job1.OutJob  Motor-20.PrjPCB
1.Hardware/REF/REF-Base/: REF-Base.OutJob
2.Firmware/Core-STM32F4-fw/: CMakeLists.txt
2.Firmware/Core-STM32F4-fw/Robot/actuators/ctrl_step/: ctrl_step.cpp  ctrl_step.hpp
2.Firmware/Core-STM32F4-fw/Robot/actuators/mintasca/: sca.cpp  sca.hpp  sca_api.c  sca_api.h  sca_protocol.c  sca_protocol.h
2.Firmware/Core-STM32F4-fw/Robot/algorithms/kinematic/: 6dof_kinematic.cpp  6dof_kinematic.h
2.Firmware/Core-STM32F4-fw/Robot/instances/: dummy_robot.cpp  dummy_robot.h
2.Firmware/Core-STM32F4-fw/Tests/: CMakeLists.txt  main.cpp  test-dummy.cpp
2.Firmware/Core-STM32F4-fw/UserApp/: common_inc.h  main.cpp
2.Firmware/Core-STM32F4-fw/UserApp/protocols/: ascii_protocol.cpp  can_protocol.cpp  cmd_protocol.cpp
2.Firmware/Ctrl-Step-Driver-STM32F1-fw/: README.md
2.Firmware/Ctrl-Step-Driver-STM32F1-fw/Core/Inc/: gpio.h  tim.h
2.Firmware/Ctrl-Step-Driver-STM32F1-fw/UserApp/: main.cpp
2.Firmware/Ctrl-Step-Driver-STM32F1-fw/UserApp/protocols/: interface_uart.cpp
3.Software/CLI-Tool/: .gitignore  readme.md  requirements.txt
